--- a/pentevo/unreal/Unreal/Unreal2017.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal2017.vcxproj
@@ -37,17 +37,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="debugger\core.cpp" />
-    <ClCompile Include="debugger\cpu_manager.cpp" />
+    <ClCompile Include="debugger\libs\cpu_manager.cpp" />
     <ClCompile Include="debugger\dbgbpx.cpp" />
     <ClCompile Include="debugger\dbgcmd.cpp" />
-    <ClCompile Include="debugger\dbglabls.cpp" />
-    <ClCompile Include="debugger\dbgrwdlg.cpp" />
-    <ClCompile Include="debugger\dbgtrace.cpp" />
-    <ClCompile Include="debugger\dbgtsconf.cpp" />
-    <ClCompile Include="debugger\dbgwidgets.cpp" />
-    <ClCompile Include="debugger\debug.cpp" />
-    <ClCompile Include="debugger\dialogs.cpp" />
-    <ClCompile Include="debugger\view.cpp" />
+    <ClCompile Include="debugger\libs\dbglabls.cpp" />
+    <ClCompile Include="debugger\libs\dbgtsconf.cpp" />
+    <ClCompile Include="debugger\libs\dbgwidgets.cpp" />
+    <ClCompile Include="debugger\libs\dialogs.cpp" />
+    <ClCompile Include="debugger\libs\view.cpp" />
     <ClCompile Include="debugger\views\devs.cpp" />
     <ClCompile Include="debugger\views\mem.cpp" />
     <ClCompile Include="debugger\views\reg.cpp" />
@@ -170,18 +167,16 @@
     <ClInclude Include="daa_tabs.h" />
     <ClInclude Include="debugger\consts.h" />
     <ClInclude Include="debugger\core.h" />
-    <ClInclude Include="debugger\cpu_manager.h" />
+    <ClInclude Include="debugger\libs\cpu_manager.h" />
     <ClInclude Include="debugger\dbgbpx.h" />
     <ClInclude Include="debugger\dbgcmd.h" />
-    <ClInclude Include="debugger\dbglabls.h" />
-    <ClInclude Include="debugger\dbgrwdlg.h" />
-    <ClInclude Include="debugger\dbgtrace.h" />
-    <ClInclude Include="debugger\dbgtsconf.h" />
-    <ClInclude Include="debugger\dbgwidgets.h" />
+    <ClInclude Include="debugger\libs\dbglabls.h" />
+    <ClInclude Include="debugger\libs\dbgtsconf.h" />
+    <ClInclude Include="debugger\libs\dbgwidgets.h" />
     <ClInclude Include="ddk.h" />
     <ClInclude Include="debugger\debug.h" />
-    <ClInclude Include="debugger\dialogs.h" />
-    <ClInclude Include="debugger\view.h" />
+    <ClInclude Include="debugger\libs\dialogs.h" />
+    <ClInclude Include="debugger\libs\view.h" />
     <ClInclude Include="debugger\views\devs.h" />
     <ClInclude Include="debugger\views\mem.h" />
     <ClInclude Include="debugger\views\reg.h" />
