--- a/pentevo/unreal/Unreal/Unreal2017.vcxproj.filters
+++ b/pentevo/unreal/Unreal/Unreal2017.vcxproj.filters
@@ -683,6 +683,7 @@
     <ClInclude Include="portable\iniparser.h" />
     <ClInclude Include="core\unreal_config.h" />
     <ClInclude Include="portable\pystring.h" />
+    <ClInclude Include="core\basic.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Unreal.rc">
